public/css/style.css
.body{
  height: 100vh;
}
.nav-bar {
  position: fixed;
  top: 0;
  width: 100%;
  overflow: hidden;
}
.landing {
  position: relative;
  background: url("../img/showcase.jpg") no-repeat;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  height: 95vh;
  margin-top: -24px;
  margin-bottom: -50px;
  width: 100wh;
  height: 100wh;
}
.skillslanding {
  position: relative;
  background: url("../img/computer-1209641_960_720.jpg") no-repeat;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  height: 60vh;
  margin-top: -24px;
  margin-bottom: -50px;
}
.aboutmelanding {
  position: relative;
  background: url("../img/IMG_5627.JPG") no-repeat;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  height: 60vh;
  margin-top: -24px;
  margin-bottom: -50px;
}
.experiencelanding {
  position: relative;
  background: url("../img/success-2081167_960_720.jpg") no-repeat;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  height: 60vh;
  margin-top: -24px;
  margin-bottom: -50px;
}
.contactlanding {
  position: relative;
  background: url("../img/businessman-2956974_1280.jpg") no-repeat;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  height: 60vh;
  margin-top: -24px;
  margin-bottom: -50px;
}
.landing-inner {
  padding-top: 80px;
}
.dark-overlay {
  background-color: rgba(0, 0, 0, 0.7);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
.card-form {
  opacity: 0.9;
}
.latest-profiles-img {
  width: 40px;
  height: 40px;
}
.form-control::placeholder {
  color: #bbb !important;
}
.about-content {
  padding: 0 200px 0 200px;
}
.profile-pic {
  width: 25%;
  height: auto;
  border-radius: 50%;
  margin: 15px auto 15px;
  display: block;
}
#bars {
  margin: 2em auto;
  max-width: 960px;
  overflow: hidden;
}
.bar {
  float: left;
  width: 20%;
  text-align: center;
}
.bar h3 {
  font-size: 1.4em;
  font-weight: normal;
  margin: 0;
  text-transform: uppercase;
}
.bar-circle {
  display: block;
  margin: 0.7em auto;
}
p {
  font-family: open sans;
  font-size: 15px;
}
#contact {
  width: 100%;
  height: 20%;
  /*background-color: #1E90FF;*/
  text-align: center;
  padding: 10px 200px 10px 200px;
}

